--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,8 @@
-# ================================
-# Node / npm
-# ================================
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-.pnpm-store/
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# ================================
-# Build Outputs
-# ================================
-dist/
-build/
-out/
-.output/
-
-# ================================
-# Vite
-# ================================
-.vite/
-
-# ================================
-# Environment Variables
-# ================================
+node_modules
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# ================================
-# Python
-# ================================
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-*.pyc
-.venv/
-venv/
-env/
-.Python
-*.egg-info/
-dist/
-*.egg
-.mypy_cache/
-.pytest_cache/
-.cache/
-
-# ================================
-# Streamlit
-# ================================
-.streamlit/secrets.toml
-
-# ================================
-# Editor & OS
-# ================================
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-.DS_Store
-Thumbs.db
-*.log
+dist
+backend/node_modules
+frontend/node_modules
+frontend/dist
+backend/lus.json
+!backend/lus.json
