Add bulk student data import: 23 S139 batch students successfully loaded into database with structured migration script

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "node server.js",
     "setup": "node setup_db.js",
+    "import": "node import_students.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
