--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "dev": "node server.js",
     "setup": "node setup_db.js",
+    "migrate": "node migrate.js",
     "import": "node import_students.js",
+    "import-mentors": "node import_mentors.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
